[gd_scene load_steps=2 format=2]

[ext_resource path="res://makingHttpRequests/CanvasLayer.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Request"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button2" type="Button" parent="."]
margin_left = 0.669846
margin_top = 29.4735
margin_right = 74.6698
margin_bottom = 49.4734
text = "Send data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 0.00390625
margin_left = 0.669849
margin_top = 54.9278
margin_right = 40.6698
margin_bottom = 68.9278
text = "Result:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
